--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "koa": "^2.13.4"
+    "koa": "^2.13.4",
+    "mongoose": "^6.6.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
