--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "koa": "^2.13.4",
+    "method-override": "^3.0.0",
     "mongoose": "^6.6.5"
   },
   "devDependencies": {
